# xcabal

./: .gitmodules  xcabal.cabal
src/: Main.hs  Paths_cabal_install.hs
