Name:               xcabal
Version:            1.22.2.0
Synopsis:           Modded cabal-install
License:            BSD3
License-File:       LICENSE
Author:             Lemmih <lemmih@gmail.com>
                    Paolo Martini <paolo@nemail.it>
                    Bjorn Bringert <bjorn@bringert.net>
                    Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                    Duncan Coutts <duncan@community.haskell.org>
Maintainer:         hvr@gnu.org
Copyright:          2005 Lemmih <lemmih@gmail.com>
                    2006 Paolo Martini <paolo@nemail.it>
                    2007 Bjorn Bringert <bjorn@bringert.net>
                    2007 Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                    2007-2012 Duncan Coutts <duncan@community.haskell.org>
Category:           Distribution
Build-type:         Simple
Cabal-Version:      >= 1.10

executable xcabal
    main-is:        Main.hs
    ghc-options:    -Wall -fwarn-tabs
    hs-source-dirs: src cabal/cabal-install

    other-modules:
        Distribution.Client.BuildReports.Anonymous
        Distribution.Client.BuildReports.Storage
        Distribution.Client.BuildReports.Types
        Distribution.Client.BuildReports.Upload
        Distribution.Client.Check
        Distribution.Client.Config
        Distribution.Client.Configure
        Distribution.Client.Dependency
        Distribution.Client.Dependency.TopDown
        Distribution.Client.Dependency.TopDown.Constraints
        Distribution.Client.Dependency.TopDown.Types
        Distribution.Client.Dependency.Types
        Distribution.Client.Dependency.Modular
        Distribution.Client.Dependency.Modular.Assignment
        Distribution.Client.Dependency.Modular.Builder
        Distribution.Client.Dependency.Modular.Configured
        Distribution.Client.Dependency.Modular.ConfiguredConversion
        Distribution.Client.Dependency.Modular.Dependency
        Distribution.Client.Dependency.Modular.Explore
        Distribution.Client.Dependency.Modular.Flag
        Distribution.Client.Dependency.Modular.Index
        Distribution.Client.Dependency.Modular.IndexConversion
        Distribution.Client.Dependency.Modular.Log
        Distribution.Client.Dependency.Modular.Message
        Distribution.Client.Dependency.Modular.Package
        Distribution.Client.Dependency.Modular.Preference
        Distribution.Client.Dependency.Modular.PSQ
        Distribution.Client.Dependency.Modular.Solver
        Distribution.Client.Dependency.Modular.Tree
        Distribution.Client.Dependency.Modular.Validate
        Distribution.Client.Dependency.Modular.Version
        Distribution.Client.Exec
        Distribution.Client.Fetch
        Distribution.Client.FetchUtils
        Distribution.Client.Freeze
        Distribution.Client.Get
        Distribution.Client.GZipUtils
        Distribution.Client.Haddock
        Distribution.Client.HttpUtils
        Distribution.Client.IndexUtils
        Distribution.Client.Init
        Distribution.Client.Init.Heuristics
        Distribution.Client.Init.Licenses
        Distribution.Client.Init.Types
        Distribution.Client.Install
        Distribution.Client.InstallPlan
        Distribution.Client.InstallSymlink
        Distribution.Client.JobControl
        Distribution.Client.List
        Distribution.Client.PackageIndex
        Distribution.Client.PackageUtils
        Distribution.Client.ParseUtils
        Distribution.Client.Run
        Distribution.Client.Sandbox
        Distribution.Client.Sandbox.Index
        Distribution.Client.Sandbox.PackageEnvironment
        Distribution.Client.Sandbox.Timestamp
        Distribution.Client.Sandbox.Types
        Distribution.Client.Setup
        Distribution.Client.SetupWrapper
        Distribution.Client.SrcDist
        Distribution.Client.Tar
        Distribution.Client.Targets
        Distribution.Client.Types
        Distribution.Client.Update
        Distribution.Client.Upload
        Distribution.Client.Utils
        Distribution.Client.World
        Distribution.Client.Win32SelfUpgrade
        Distribution.Client.Compat.Environment
        Distribution.Client.Compat.ExecutablePath
        Distribution.Client.Compat.FilePerms
        Distribution.Client.Compat.Process
        Distribution.Client.Compat.Semaphore
        Distribution.Client.Compat.Time

        Paths_cabal_install
        Paths_xcabal

    build-depends:
        Cabal       >= 1.22.2   && < 1.23,
        HTTP        >= 4000.2.5 && < 4000.3,
        array       >= 0.1      && < 0.6,
        base        >= 4.3      && < 5,
        bytestring  >= 0.9      && < 1,
        containers  >= 0.1      && < 0.6,
        directory   >= 1.2      && < 1.3,
        filepath    >= 1.0      && < 1.5,
        mtl         >= 2.0      && < 3,
        network     >= 2.6,
        network-uri >= 2.6,
        pretty      >= 1        && < 1.2,
        process     >= 1.1.0.2  && < 1.3,
        random      >= 1        && < 1.2,
        stm         >= 2.0      && < 3,
        time        >= 1.1      && < 1.6,
        unix        >= 2.0      && < 2.8,
        zlib        >= 0.5.3    && < 0.6

    ghc-options: -threaded -rtsopts

    c-sources: cabal/cabal-install/cbits/getnumcores.c
    default-language: Haskell2010
